# Dynamic-Secure-Portable-Volume

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
secure_volume/: cv.txt
src/: main.rs
src/crypto/: cipher.rs  kdf.rs
src/os/: linux.rs  macos.rs  mod.rs  windows.rs
src/protocol/: webdav.rs
src/storage/: cache.rs  chunk_io.rs  header.rs  index.rs  mod.rs  vault.rs
src/utils/: memory.rs
