[package]
name = "Dynamic-Secure-Portable-Volume"
version = "0.1.0"
edition = "2024"

[dependencies]
# --- Cryptographie & Sécurité ---
aes = "0.8.4"
xts-mode = "0.5.1"
argon2 = "0.5.3"
rand = "0.10.0"
zeroize = { version = "1.8.2", features = ["zeroize_derive"] }

# --- Serveur WebDAV & Réseau ---
dav-server = "0.11.0"
hyper = { version = "1.9.0", features = ["server", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto"] }
bytes = "1.11.1"

# --- Asynchrone & Concurrence ---
tokio = { version = "1.51.1", features = ["rt-multi-thread", "macros", "net", "signal"] }
futures-util = "0.3.32"
dashmap = "6.1.0"

# --- Utilitaires OS ---
fs4 = "0.13.1"
rpassword = "7.4.0"
